--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
 
 
       <link href="https://fonts.googleapis.com/css2?family=Gantari:wght@300;400&family=Righteous&display=swap" rel="stylesheet">
-    <title>Ligma Nutz</title>
+    <title>Ligma Balls</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
